<resources>
    <string name="app_name">Idea Hunters</string>
    <string name="login_heading_text">Login</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="no_account_text">No account yet?</string>
    <string name="signup_now_text">SignUp now</string>
    <string name="signup_heading_text">SignUp</string>
    <string name="hint_repeat_password">Confirm Password</string>
    <string name="hintPhone">Phone Number</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_phone">Enter valid phone number</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_ideatitle">Idea Title</string>
    <string name="problem_with_login"><b><u>Problem with Login ?</u></b></string>
    <string name="signup">SignUp</string>
    <string name="Hello">Hello</string>
    <string name="type_of_idea">Type Of Idea</string>
    <string name="key_performance">Key Performance</string>
    <string name="idea">Idea</string>
    <string name="saving_estimate">Saving Estimate</string>
    <string name="key_result">Expected Key Results</string>
    <string name="comments">Comments</string>
    <string name="settings">Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="cost1"><u>0 to 10k</u></string>
    <string name="cost2"><u>10k to 100k</u></string>
    <string name="cost3"><u>Above 100k</u></string>
    <string name="signin"><u>Sign In</u></string>
    <string name="planning"><u>Planning</u></string>
    <string name="tier1"><u> Tier 1</u></string>
    <string name="tier2"><u> Tier 2</u></string>
    <string name="function">Function*</string>
    <string name="Function">Function</string>
    <string name="biz_type">Biz Entity</string>
    <string name="name">Name</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="select_company">Select Company</string>
    <string name="err_msg_password">Enter Password</string>
    <string name="err_msg__mismatch_password"><![CDATA[Password & Repeat Password mismatch]]></string>
    <string name="err_msg_repeat_password">Enter Repeat Password</string>
    <string name="err_msg_company">Select Company Name</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-category</string>
    <string name="explain_idea">Explain the idea</string>
    <string name="upload_file">Upload Photo</string>
    <string name="key_results">Key Results Expected</string>
    <string name="my_idea">MY IDEA</string>
    <string name="leave_company">LEAVE COMPANY</string>
    <string name="submitted_by">Submitted By</string>
    <string name="submitted_date">Submitted Date</string>
    <string name="company_name">Company Name</string>
    <string name="comment">comment</string>
    <string name="err_msg_title_blank">Enter Idea Title</string>
    <string name="err_msg_category">Select Idea Category</string>
    <string name="err_msg_description">Explain the idea</string>
    <string name="err_msg_keyresult">Enter key Result</string>
    <string name="add_idea">Add Idea</string>
    <string name="no_company_added">No company added by admin yet</string>
    <string name="err_msg_password_length">Password must be 4 character long</string>
    <string name="no_category_added">No category added by admin yet</string>
    <string name="action_search">search</string>
    <string name="my_ideas">My Ideas</string>
    <string name="err_msg_empcode_blank">Field can\'t be empty</string>
    <string name="edit_idea">Edit Idea</string>
    <string name="dialog_message_no_internet">No internet Connection Available!</string>
    <string name="dialog_message_internet">Connection Available!</string>
    <string name="report">Report abuse</string>
    <string name="update" >Update</string>
    <string name="idea_explanation">Idea Explaintion</string>
    <string name="allIdeas">All Ideas</string>
    <string name="mostLiked">Most Liked</string>
    <string name="notification">Notification</string>
    <string name="submit">Submit</string>
    <string name="likeByMe">Liked By Me</string>
    <string name="no_comment">No Comment</string>
    <string name="no_idea">No Idea Found</string>
</resources>
