<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:fillViewport="true"
    android:background="@color/colorWhite"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusableInTouchMode="true"
android:focusable="false"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".3"
    android:layout_gravity="center"
   android:background="@color/colorSecondary" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:src="@drawable/logo"
        android:gravity="center"
        android:layout_gravity="center"
       />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight=".5"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
   android:layout_marginRight="20dp"

   >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColorHint="@color/hint_color">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
           />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:textColorHint="@color/hint_color" >

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColorHint="@color/colorWhite"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp">
    <Button android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/btn_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_yellow_btn"
        android:textColor="@android:color/white"/>
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/colorBlack"
       android:layout_marginTop="10dp" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
       android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginTop="8dp">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_text"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/signup_now"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/btn_signup"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"                android:textColor="@color/colorSecondary"
                android:background="@drawable/transparent_btn_border"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>

